--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "body-parser": "^1.15.0",
     "chokidar": "^1.4.3",
-    "express": "^4.13.4"
+    "express": "^4.13.4",
+    "node-rest-client": "^1.8.0"
   },
   "devDependencies": {
     "chai": "^3.5.0",
